update the content for 2020

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -189,7 +189,7 @@
            gaining foundational experience working with data within a
            wide range of industries.
            <br><br>
-           I have applied my curiosity and attention to detail in industries
+           By 2015, I had applied my curiosity and attention to detail in industries
            ranging from real estate assessment, property insurance,
            biochemical defense, transportation safety research, and
            cancer research.
@@ -197,15 +197,41 @@
     </li>
     <li>
       <div>
-        <h5>2015 to now: Data science</h5>
+        <h5>2015 to 2018: Data science</h5>
           In mid-2015 I left the nonprofit research world
           and joined Nordstrom for the opportunity to
           increase my exposure to statistics applied in more of a
           business setting.
           <br><br>
-          In my current role as a Senior Data Scientist at
-          Nordstrom, I lead analyses from start to finish while leveraging new tools,
+          During this time, I led analyses from start to finish while leveraging new tools,
           refining documentation, and automating processes wherever possible.
+      </div>
+    </li>
+
+    <li>
+      <div>
+        <h5>2018 to 2019: Transition to leadership</h5>
+          At some point along my career, I realized that my communication skills,
+          desire to mentor others, diversity of achievements, and ability to
+          design and execute solutions made stepping into a management role
+          the most logical next step. But like most data scientists, I was
+          reluctant to forego coding and problem-solving. So I decided to approach
+          this challenge as a new type of problem with infinitely more
+          variables and potentially unbounded error terms.
+          <br><br>
+          Management turned out to be the most complicated problem I had
+          attempted so far... and I loved it.
+      </div>
+    </li>
+
+    <li>
+      <div>
+        <h5>2020: Facebook</h5>
+          In my current role, I'm building an analytics team that
+          can scale to support Facebook's continued growth and influence
+          change with data. We partner closely with internal groups who use
+          our insights to inform changes and improvements
+          to the way Facebook grows and operates its global offices.
       </div>
     </li>
 
@@ -296,10 +322,10 @@
                           stitched together from various
                           <a href="https://codepen.io/tutsplus/pen/QNeJgR" target="_blank">codepens</a>
                           and
-                          <a href="https://bootstrapmade.com/free-one-page-bootstrap-themes-website-templates/" target="_blank">One Page Bootstrap Themes</a>
+                          <a href="https://bootstrapmade.com/bootstrap-one-page-templates/" target="_blank">One Page Bootstrap Themes</a>
                           by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>.
                           <br><br>
-                          <a href="https://github.com/hbergen/heroku-flask-portfolio" target="_blank">View my source code for this site.</a>
+                          Interested in using this format for your own site? View my source code <a href="https://github.com/hbergen/heroku-flask-portfolio" target="_blank">here.</a>
                         </div>
 				</div>
 			</div>
